--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -1,11 +1,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time_1" data-view="Alert" data-addclass-danger="isTooHigh" data-title="Response Time App1" data-threshold=200 ></div>
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time_2" data-view="Alert" data-title="Response Time App2" data-threshold=3s00></div>
+      <div data-id="uptime-robot" data-view="Uptime" data-title="Uptime"></div>
     </li>
   </ul>
 </div>
