--- a/widgets/uptime/uptime.scss
+++ b/widgets/uptime/uptime.scss
@@ -1,3 +1,26 @@
+// ----------------------------------------------------------------------------
+// Sass declarations
+// ----------------------------------------------------------------------------
+$background-color:  #12b0c5;
+$value-color:       #fff;
+
+$title-color:       rgba(255, 255, 255, 0.7);
+$label-color:       rgba(255, 255, 255, 0.7);
+$moreinfo-color:    rgba(255, 255, 255, 0.7);
+
+// ----------------------------------------------------------------------------
+// Widget-list styles
+// ----------------------------------------------------------------------------
 .widget-uptime {
 
+  background-color: $background-color;
+
+  .title {
+    color: $title-color;
+    // margin-top: -80px;
+  }
+
+  .name {
+    padding: 10px;
+  }
 }
