Added octoprint Widget

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -3,5 +3,8 @@
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="uptime-robot" data-view="Uptime" data-title="Uptime"></div>
     </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="octoprint" data-view="Octoprint" data-title="Octoprint"></div>
+    </li>
   </ul>
 </div>
