Added down indication to uptime widget

--- a/widgets/uptime/uptime.scss
+++ b/widgets/uptime/uptime.scss
@@ -23,4 +23,12 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   .name {
     padding: 10px;
   }
+
+  .hide {
+    visibility: hidden;
+  }
+
+  .down {
+    color: red;
+  }
 }
