Added forecast.io weather widget

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -6,5 +6,8 @@
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="octoprint" data-view="Octoprint" data-title="Octoprint"></div>
     </li>
+    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
+     <div data-id="verbinski" data-view="Verbinski"></div>
+   </li> 
   </ul>
 </div>
