Added Gmail Widget

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -8,6 +8,9 @@
     </li>
     <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
      <div data-id="verbinski" data-view="Verbinski"></div>
-   </li> 
+   </li>
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+     <div data-id="gmail" data-view="List" data-title="Unread E-Mail" data-unordered="true"></div>
+   </li>
   </ul>
 </div>
