Added last updated at to widgets

--- a/widgets/uptime/uptime.scss
+++ b/widgets/uptime/uptime.scss
@@ -31,4 +31,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   .down {
     color: red;
   }
+
+  .updated-at {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
