--- a/widgets/octoprint/octoprint.scss
+++ b/widgets/octoprint/octoprint.scss
@@ -19,4 +19,8 @@ $title-color:       rgba(255, 255, 255, 0.7);
   table td {
     font-size: 20px;
   }
+
+  .updated-at {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
