--- a/widgets/octoprint/octoprint.scss
+++ b/widgets/octoprint/octoprint.scss
@@ -20,6 +20,15 @@ $title-color:       rgba(255, 255, 255, 0.7);
     font-size: 20px;
   }
 
+  .label {
+    text-align: right;
+  }
+
+  .value {
+    text-align: left;
+    padding-left: 10px;
+  }
+
   .updated-at {
     color: rgba(0, 0, 0, 0.3);
   }
