--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -10,7 +10,7 @@
      <div data-id="verbinski" data-view="Verbinski"></div>
    </li>
    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-     <div data-id="gmail" data-view="List" data-title="Unread E-Mail" data-unordered="true"></div>
+     <div data-id="gmail" data-view="List" data-title="Unread E-Mail" data-unordered="true" class="mail-list"></div>
    </li>
   </ul>
 </div>
