--- a/widgets/uptime/uptime.scss
+++ b/widgets/uptime/uptime.scss
@@ -12,7 +12,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 // Widget-list styles
 // ----------------------------------------------------------------------------
 .widget-uptime {
-
+  font-size: 18px;
   background-color: $background-color;
 
   .title {
