Added Holidays widget to show next event in holidays ical

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -12,5 +12,8 @@
    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
      <div data-id="gmail" data-view="List" data-title="Unread E-Mail" data-unordered="true" class="mail-list"></div>
    </li>
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+     <div data-id="holidays" data-view="Holidays" data-title="Next Holiday in" data-unordered="true" class="mail-list"></div>
+   </li>
   </ul>
 </div>
